manifests/istio/destinationrule-iris.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: iris-service
  namespace: mlops-apps
spec:
  host: iris-service.mlops-apps.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
    connectionPool:
      http:
        http1MaxPendingRequests: 100
        maxRequestsPerConnection: 20
