manifests/istio/virtualservice-katib.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: katib-ui
  namespace: kubeflow
spec:
  hosts:
    - "katib.127.0.0.1.nip.io"
  gateways:
    - istio-ingress/mlops-gateway
  http:
    - match:
        - uri:
            exact: /
      redirect:
        uri: /katib/
    - route:
        - destination:
            host: katib-ui.kubeflow.svc.cluster.local
            port:
              number: 80
